[tool.poetry]
name = "atlas-of-information-management"
description = "atlas-of-information-management"
version = "0.0.0"
license = "GPL-3.0-or-later"
authors = [
    "Paula Courville",
    "Darrel Drake",
    "Dee Anna Hillebrand",
    "Scott Manley",
    "Madeline Matz",
    "Christopher Pickering <cpickering@rhc.net>",
    "Dan Ryan",
    "Richard Schissler",
    "Eric Shultz"
]
packages = [{ include = "testing" }]

[tool.poetry.dependencies]
python = "^3.6.2"
urllib3 = "^1.26.3"
selenium = "^4.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "Pygments", "furo", "sphinx-copybutton", "sphinx-inline-tabs", "myst-parser", "colorama", "sphinx-panels", "sphinxcontrib-youtube"]

[tool.poetry.dev-dependencies]
Sphinx = { version = "^3.5.2", optional = true }
Pygments = { version = "^2.8.1", optional = true }
furo = { version = "^2022.0.0", optional = true }
sphinx-copybutton = { version = "^0.5.0", optional = true }
sphinx-inline-tabs = { version = "^2020.10.19-beta.4", optional = true }
myst-parser = { version = "^0.17.0", optional = true }
colorama = { version = "^0.4.4", optional = true }
sphinx-panels = { version = "^0.6.0", optional = true }
sphinxcontrib-youtube = {git = "https://github.com/sphinx-contrib/youtube.git", optional = true }


[tool.black]
max_line_length = 99
include ='atlas'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data

      # atlas
      | migrations
      | Data_Governance_ETL
      | Data_Governance_WebApp
    )/
    '''
quiet = true


[tool.isort]
profile = "black"
quiet = true
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
